@@ -7,6 +7,7 @@
     * Add Net::SSLeay::SSL_CTX#set_alpn_protos method.
     * Add Net::SSLeay::EC_KEY class.
     * Add Net::SSLeay::SSL_CTX#set_tmp_ecdh method.
+    * Add Net::SSLeay::SSL_CTX#set1_groups_list method.
     
 0.009 2024-11-08
   [Requirement Changes]
